Implement flag sorting